--- a/src/main/resources/br/ifsp/husaocarlos/application/view/ListAppointmentsUI.fxml
+++ b/src/main/resources/br/ifsp/husaocarlos/application/view/ListAppointmentsUI.fxml
@@ -14,8 +14,8 @@
             <TableColumn fx:id="cStatus" prefWidth="92.0" text="Status" />
         </columns>
       </TableView>
-      <Label layoutX="311.0" layoutY="30.0" text="Paciente:" AnchorPane.rightAnchor="228.0" AnchorPane.topAnchor="30.0" />
-      <TextField fx:id="txtPatient" layoutX="381.0" layoutY="26.0" AnchorPane.rightAnchor="48.0" AnchorPane.topAnchor="26.0" />
+      <Label fx:id="lblSearch" layoutX="311.0" layoutY="30.0" text="Paciente:" AnchorPane.rightAnchor="228.0" AnchorPane.topAnchor="30.0" />
+      <TextField fx:id="txtFilter" layoutX="381.0" layoutY="26.0" AnchorPane.rightAnchor="48.0" AnchorPane.topAnchor="26.0" />
       <Button layoutX="557.0" layoutY="26.0" mnemonicParsing="false" onMouseClicked="#findAppointments" text="&gt;" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="26.0" />
    </children>
 </AnchorPane>
